--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,6 +20,7 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "axios": "^1.7.8",
     "dotenv": "^16.4.5",
     "express": "^4.21.1"
   }
