--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.1",
     "concurrently": "^9.1.0",
@@ -21,6 +22,7 @@
   },
   "dependencies": {
     "axios": "^1.7.8",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1"
   }
