--- a/Backend/package.json
+++ b/Backend/package.json
@@ -24,6 +24,8 @@
     "axios": "^1.7.8",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.5"
   }
 }
